done with compression corner

--- a/low_mach.tex
+++ b/low_mach.tex
@@ -1073,16 +1073,14 @@ Plots of the Mach number, density, and pressure are given at steady-state in \fi
                 \caption{Density}
                 \label{fig:1d_nozzle_liq_density}
         \end{subfigure}
-         %add desired spacing between images, e. g. ~, \quad, \qquad etc. 
-          %(or a blank line to force the subfigure onto a new line)
+
         \begin{subfigure}[b]{0.495\textwidth}
                 \centering
                 \includegraphics[width=\textwidth]{liquid_pressure_numerical_and_exact_50.png}
                 \caption{Pressure}
                 \label{fig:1d_nozzle_liq_press}
         \end{subfigure}
-          %add desired spacing between images, e. g. ~, \quad, \qquad etc. 
-          %(or a blank line to force the subfigure onto a new line)
+
         \begin{subfigure}[b]{0.495\textwidth}
                 \centering
                 \includegraphics[width=\textwidth]{liquid_viscosity_numerical50.png}
@@ -1148,24 +1146,21 @@ The pressure difference between the inlet and outlet is large enough to accelera
                 \caption{Mach number}
                 \label{fig:1d_nozzle_vap_vel}
         \end{subfigure}%
-        %add desired spacing between images, e. g. ~, \quad, \qquad etc. 
-          %(or a blank line to force the subfigure onto a new line)
+
         \begin{subfigure}[b]{0.495\textwidth}
                 \centering
                 \includegraphics[width=\textwidth]{vapor_density_numerical_and_exact_1600.png}
                 \caption{Density}
                 \label{fig:1d_nozzle_vap_density}
         \end{subfigure}
-         %add desired spacing between images, e. g. ~, \quad, \qquad etc. 
-          %(or a blank line to force the subfigure onto a new line)
+
         \begin{subfigure}[b]{0.495\textwidth}
                 \centering
                 \includegraphics[width=\textwidth]{vapor_pressure_numerical_and_exact_1600.png}
                 \caption{Pressure}
                 \label{fig:1d_nozzle_vap_press}
         \end{subfigure}
-          %add desired spacing between images, e. g. ~, \quad, \qquad etc. 
-          %(or a blank line to force the subfigure onto a new line)
+
         \begin{subfigure}[b]{0.495\textwidth}
                 \centering
                 \includegraphics[width=\textwidth]{vapor_viscosity_numerical1600.png}
@@ -1379,8 +1374,7 @@ The simulation is run with a $CFL=1$ until the final time $t_{\text{final}} = 7 
                 \caption{Density, velocity and pressure profiles.}
                 \label{fig:1d_strong_shock_var}
         \end{subfigure}%
-        %add desired spacing between images, e. g. ~, \quad, \qquad etc. 
-          %(or a blank line to force the subfigure onto a new line)
+
         \begin{subfigure}[b]{0.495\textwidth}
                 \centering
                 \includegraphics[width=\textwidth]{LiquidSrongShock_viscosity.png}
@@ -1411,8 +1405,7 @@ The numerical results are in good agreement with the exact solution and do not d
                 \caption{Velocity, density and pressure}
                 \label{fig:profiles_sms}
         \end{subfigure}%
-        %add desired spacing between images, e. g. ~, \quad, \qquad etc. 
-          %(or a blank line to force the subfigure onto a new line)
+
         \begin{subfigure}[b]{0.495\textwidth}
                 \centering
                 \includegraphics[width=\textwidth]{SlowMovingShock_viscosity.png}
@@ -1464,40 +1457,34 @@ Several simulations are performed, with inlet Mach numbers $M_{\text{inlet}}$ ra
                 \caption{$M_{\text{inlet}}=10^{-3}$}
                 \label{fig:cyl_1em3}
         \end{subfigure}%
-        %add desired spacing between images, e. g. ~, \quad, \qquad etc. 
-          %(or a blank line to force the subfigure onto a new line)
+
         \begin{subfigure}[b]{0.495\textwidth}
                 \centering
                 \includegraphics[width=\textwidth]{CylinderMach1em4ZoomIn.png}
                 \caption{$M_{\text{inlet}}=10^{-4}$}
                 \label{fig:cyl_1em4}
         \end{subfigure}    
-         %add desired spacing between images, e. g. ~, \quad, \qquad etc. 
-          %(or a blank line to force the subfigure onto a new line)
+
         \begin{subfigure}[b]{0.495\textwidth}
                 \centering
                 \includegraphics[width=\textwidth]{CylinderMach1em5ZoomIn.png}
                 \caption{$M_{\text{inlet}}=10^{-5}$}
                 \label{fig:cyl_1em5}
         \end{subfigure}
-          %add desired spacing between images, e. g. ~, \quad, \qquad etc. 
-          %(or a blank line to force the subfigure onto a new line)
+
         \begin{subfigure}[b]{0.495\textwidth}
                 \centering
                 \includegraphics[width=\textwidth]{CylinderMach1em6ZoomIn.png}
                 \caption{$M_{\text{inlet}}=10^{-6}$}
                 \label{fig:cyl_1em6}
         \end{subfigure}
-         %add desired spacing between images, e. g. ~, \quad, \qquad etc. 
-          %(or a blank line to force the subfigure onto a new line)
+
         \begin{subfigure}[b]{0.495\textwidth}
                 \centering
                 \includegraphics[width=\textwidth]{CylinderMach1em7ZoomIn.png}
                 \caption{$M_{\text{inlet}}=10^{-7}$}
                 \label{fig:cyl_1em7}
         \end{subfigure}
-          %add desired spacing between images, e. g. ~, \quad, \qquad etc. 
-          %(or a blank line to force the subfigure onto a new line)
 %        \begin{subfigure}[b]{0.495\textwidth}
 %                \centering
 %                \includegraphics[width=\textwidth]{CylinderMach1em8ZoomIn.png}
@@ -1508,7 +1495,7 @@ Several simulations are performed, with inlet Mach numbers $M_{\text{inlet}}$ ra
 				\label{fig:cylinder}
 \end{figure}
 %
-In \tbl{tbl:velocity_ratio}, the velocity at the top of the cylinder and at the inlet are given for different Mach-number values (ranging from $10^{-3}$ to $10^{-7}$). The ratio of the inlet velocity to the velocity at the top of cylinder is also computed and is very close to the value theoretical value of $2$ that is expected in the incompressible limit \tcr{check my mods}.
+The velocity at the top of the cylinder and at the inlet are given for different Mach-number values (ranging from $10^{-3}$ to $10^{-7}$) in \tbl{tbl:velocity_ratio}. The ratio of the inlet velocity to the velocity at the top of cylinder is also computed and is very close to the value theoretical value of $2$ that is expected in the incompressible limit \tcr{check my mods}.
 %
 \begin{table}[H]
 \begin{center}
@@ -1526,7 +1513,7 @@ $10^{-7}$ & $2.283$ $10^{-7}$ & $1.144$ $10^{-7}$ & $1.99$ \\ \hline
 \nonumber
 \end{table}
 %
-In \fig{fig:pressure_vel_fluc}, the pressure and velocity fluctuations are plotted as a function of the Mach number (log-log scale). The pressure and velocity fluctuations are expected to be of the order of $M^2$ and $M$, respectively. It is known that some stabilization methods, e.g., \cite{guillard}, can produce pressure fluctuations with the wrong Mach-number order. Here, we note that the new definitions of the entropy viscosity coefficients yield the correct order in the low-Mach limit for the pressure fluctuations. It was also observed that the velocity fluctuations are of the order of the Mach number. For easy of comparison, the reference lines with slope values of 1 and 2 are also provided. \tcr{change the legend appropriately}
+In \fig{fig:pressure_vel_fluc}, the fluctuations in pressure and velocity are plotted as a function of the Mach number (on a log-log scale). The fluctuations are expected to be of the order of $M^2$ and $M$ for the pressure and velocity, respectively. It is known that some stabilization methods, e.g., \cite{guillard, rajoute'dautres exemples}, can produce pressure fluctuations with the wrong Mach-number order. Here, entropy viscosity method yields the correct order in the low-Mach limit. For easy of comparison, the reference lines with slope values of 1 and 2 are also provided. \tcr{change the legend in the plot appropriately}
 %
 \begin{figure}[H]
 \centering
@@ -1539,7 +1526,7 @@ In \fig{fig:pressure_vel_fluc}, the pressure and velocity fluctuations are plott
 \subsection{Subsonic flow over a 2-D hump} \label{sec:hump}
 %---------------------------------------------------------------------------------------------------
 
-\txr{circular or Gaussian hump???}
+\txr{Is it a circular hump or Gaussian hump in the literature???}
 
 This is a another example of an internal flow configuration. It consists of a channel of height $L=1$ $m$ and length $3L$, with a circular bump of length $L$ and thickness $0.1L$. The bump is located on the bottom wall at a distance $L$ from the inlet. The system is initialized with an uniform pressure $P=101,325$ $Pa$ and temperature $T=300$ $K$. The initial velocity is computed from the inlet Mach number, the pressure, the temperature and the ideal gas equation (with  $\gamma=1.4$). Here,  $C_v = 717$ $J/kg-K$. At the inlet, a subsonic stagnation boundary condition is used and the stagnation pressure and temperature are computed using \eqt{eq:stagnation_relations}.
 The static pressure $P_s = 101,325$ $Pa$ is set at the subsonic outlet. The results are shown in \fig{fig:2d_hump_mach_0p7}, \fig{fig:2d_hump_mach_0p01}, \fig{fig:2d_hump_mach_0p0001} and \fig{fig:2d_hump_mach_0p0000001} for the inlet Mach numbers $M_{\infty}=0.7$, $M_{\infty}=0.01$, $M_{\infty}=10^{-4}$ and $M_{\infty}=10^{-7}$, respectively. It is expected that, within the low Mach number range, the solution does not depend on the Mach number and is identical to the solution obtained with an incompressible flow code. On the other hand, for a flow at $M=0.7$, the compressible effects become more important and shock can form. An uniform grid of $3352$ $Q_1$ elements was used to obtain the numerical solution for Mach numbers below $M_{\infty}=0.01$. A once-refined mesh was employed for the $M_{\infty}=0.7$ simulation in order to better resolve the shock. A $CFL$ of $20$ was employed and the simulations were run until steady state.
@@ -1552,8 +1539,7 @@ The static pressure $P_s = 101,325$ $Pa$ is set at the subsonic outlet. The resu
                 \caption{Mach $0.7$}
                 \label{fig:2d_hump_mach_0p7}
         \end{subfigure}%
-          %add desired spacing between images, e. g. ~, \quad, \qquad etc. 
-          %(or a blank line to force the subfigure onto a new line)
+
         \begin{subfigure}[b]{0.5\textwidth}
                 \centering
                 \includegraphics[width=\textwidth]{Hump2D_mach_0p01.png}
@@ -1561,16 +1547,13 @@ The static pressure $P_s = 101,325$ $Pa$ is set at the subsonic outlet. The resu
                 \label{fig:2d_hump_mach_0p01}
         \end{subfigure}%
         
-        %add desired spacing between images, e. g. ~, \quad, \qquad etc. 
-          %(or a blank line to force the subfigure onto a new line)
         \begin{subfigure}[b]{0.495\textwidth}
                 \centering
                 \includegraphics[width=\textwidth]{Hump2D_mach_1em4.png}
                 \caption{Mach $10^{-5}$}
                 \label{fig:2d_hump_mach_0p0001}
         \end{subfigure}
-         %add desired spacing between images, e. g. ~, \quad, \qquad etc. 
-          %(or a blank line to force the subfigure onto a new line)
+
         \begin{subfigure}[b]{0.495\textwidth}
                 \centering
                 \includegraphics[width=\textwidth]{Hump2D_mach_1em7.png}
@@ -1591,55 +1574,52 @@ The results presented in \fig{fig:2d_hump} were obtained with the new definition
 \subsection{Supersonic flow in a compression corner} \label{sec:corner}
 %---------------------------------------------------------------------------------------------------
 
-This is an example of a supersonic flow over a wedge of angle $15^{\circ}$ where an oblique shock is generated at steady-state. The Mach number upstream of the shock is fixed to $M=2.5$. The initial conditions are uniform: the pressure and temperature are set to $P=101325$ $Pa$ and $T=300$ $K$, respectively. The initial velocity is computed from the upstream Mach number and using the Ideal Gas equation of state with the same parameters as in \sct{sec:hump}. The code is run until steady-state with a $CFL$ of $2$. The 2-D mesh was made of $16109$ $Q_1$ elements. From the oblique shock theory \cite{CompressionCorner}, an analytical solution for this supersonic flow is available and give the downstream to upstream pressure, entropy and Mach number ratios. The analytical and numerical ratios are given in \tbl{tbl:corner_exact_sol}, and are very close. The shock wave angle at steady-state is also known and given by the so-called $\theta -\beta -M$ relation:
+In this last example, we consider a supersonic flow at Mach 2.5 impinging on a corner with an angle of $15^\circ$. From the oblique shock theory \cite{CompressionCorner}, an analytical solution for this supersonic flow is available and give the downstream to upstream pressure, entropy and Mach number ratios. 
+The initial conditions are chosen to be spatially uniform: the pressure and temperature are set to $P=101,325$ $Pa$ and $T=300$ $K$, respectively.  The ideal gas equation of state is used with the same parameters as in \sct{sec:hump}. The initial velocity is computed from the upstream Mach number. The inlet is supersonic and therefore, the pressure, temperature and velocity are specified using Dirichlet boundary conditions. The outlet is also supersonic and none of the characteristics enter the domain through this boundary: the values will be computed by the implicit solver.
+
+The simulation is run with $CFL=2$, until steady state is reached. A 2-D mesh made of $16,109$ $\mathbb{Q}_1$ elements is used. The ratios for pressure, entropy and Mach number computed using the  analytical and the numerical solutions are given in \tbl{tbl:corner_exact_sol}; they are in excellent agreement. \tcr{why only 2 significant digits for the analytical values but 3 for the numerical values?} The shock wave angle at steady state is also known and given by the so-called $\theta -\beta -M$ relation:
 %
 \begin{equation}
-\tan \theta = 2 \cot \beta \frac{M^2 \sin^2 \beta -1}{M^2 \left(\gamma+\cos^2 (2\beta)\right)+2} \nonumber
+\tan \theta = 2 \cot \beta \frac{M^2 \sin^2 \beta -1}{M^2 \left(\gamma+\cos^2 (2\beta)\right)+2} ,
 \end{equation}
 %
-where $\theta$, $\beta$ and $M$ denote the wedge angle, the shock wave angle and the upstream Mach number, respectively. For the example under consideration with an inlet Mach number of $2.5$, the exact value of the shock wave angle is of $36.94^{\circ}$ at steady-state. From \fig{fig:2d_corner_mach}, the numerical value of the shock wave angle can be measured and is found equal to $36.9^{\circ}$: the numerical and exact values are very close.
+where $\theta$, $\beta$ and $M$ denote the corner angle, the shock wave angle, and the upstream Mach number, respectively. For Mach 2.5 and a 15$^\circ$ corner angle, the analytical value for the shock wave angle is $36.94^{\circ}$ at steady-state. From \fig{fig:2d_corner_mach}, the numerical value of the shock wave angle can be measured and is found to be equal to $36.9^{\circ}$, and thus in excellent agreement with theory.
 %
 \begin{table}[H]
 \begin{center}
- \caption{\label{tbl:corner_exact_sol} Ratio of analytical and numerical downstream to upstream quantities for the compression corner problems (edge asngle of $15^{\circ}$ and inlet $M=2.5$.}
- \begin{tabular}{|c|c|c|}  \hline
+\begin{tabular}{|c|c|c|}  \hline
             & analytical & numerical\\ \hline
 Pressure    & 2.47       & 2.467    \\ \hline
 Mach number &  0.74      & 0.741    \\ \hline
 Entropy     & 1.03       & 1.026    \\ \hline 
 \end{tabular}
+\caption{\label{tbl:corner_exact_sol} Ratio of analytical and numerical downstream to upstream quantities for the compression corner problems (corner angle of $15^\circ$ and inlet $M=2.5$.}
 \end{center}
 \end{table}
-%
-The inlet is supersonic and therefore, the pressure, temperature and velocity are specified using Dirichlet boundary conditions. The outlet is also supersonic and none of the characteristics enter the domain through this boundary: the values will be computed by the implicit solver.
 %
 \begin{figure}[H]
         \centering
         \begin{subfigure}[b]{0.52\textwidth}
                 \centering
                 \includegraphics[width=\textwidth]{CompressionCorner2D_mach.png}
-                \caption{Mach solution at steady-state.}
+                \caption{Mach number}
                 \label{fig:2d_corner_mach}
         \end{subfigure}%
-          %add desired spacing between images, e. g. ~, \quad, \qquad etc. 
-          %(or a blank line to force the subfigure onto a new line)
+
         \begin{subfigure}[b]{0.52\textwidth}
                 \centering
                 \includegraphics[width=\textwidth]{CompressionCorner2D_viscosity.png}
-                \caption{Viscosity coefficient at steady-state.}
+                \caption{Viscosity coefficients}
                 \label{fig:2d_corner_visc}
         \end{subfigure}
         
-        %add desired spacing between images, e. g. ~, \quad, \qquad etc. 
-          %(or a blank line to force the subfigure onto a new line)
         \begin{subfigure}[b]{0.49\textwidth}
                 \centering
                 \includegraphics[width=\textwidth]{mach_number_pressure.png}
-                \caption{Pressure and Mach number profiles at steady-state}
+                \caption{Pressure and Mach number}
                 \label{fig:2d_corner_isomach}
         \end{subfigure}        
-          %add desired spacing between images, e. g. ~, \quad, \qquad etc. 
-          %(or a blank line to force the subfigure onto a new line)
+
         \begin{subfigure}[b]{0.49\textwidth}
                 \centering
                 \includegraphics[width=\textwidth]{CompressionCorner2DQ.png}
@@ -1649,8 +1629,8 @@ The inlet is supersonic and therefore, the pressure, temperature and velocity ar
         \caption{Steady-state solution for a flow in a 2-D compression corner.}\label{fig:2d_corner}
 \end{figure}
 %
-The steady-state numerical solution is given in \fig{fig:2d_corner}: the Mach number and the viscosity coefficients are plotted in \fig{fig:2d_corner_mach} and \fig{fig:2d_corner_visc}, respectively. The steady-state solution is formed of two regions of constant states, separated by the oblique shock. \fig{fig:2d_corner_visc} shows that the viscosity coefficient is large in the shock and small anywhere else, as expected. At the corner of the edge at $x=-0.25$ $m$, the viscosity coefficient is peaked because of the treatment of the wall boundary condition: at this particular node, the normal is not well defined and can cause numerical errors. The 1-D plots of the pressure and the mach number at $y=0$, are also given in \fig{fig:2d_corner_isomach}: the shock does not show any spurious oscillations and is well resolved. Finally, the difference between the inlet and outlet mass flow rates is plotted in \fig{fig:2d_convergence} and show that the steady-state is reached. \\
-Overall, the numerical solution does not show any oscillations, match the analytical solution, and the shock is well resolved.
+The steady-state numerical solution is given in \fig{fig:2d_corner}: the Mach number and the viscosity coefficients are plotted in \fig{fig:2d_corner_mach} and \fig{fig:2d_corner_visc}, respectively. The steady-state solution is formed of two regions of constant states, separated by the oblique shock. \fig{fig:2d_corner_visc} shows that the viscosity coefficient is large in the shock and small elsewhere, as expected. At the location of the corner ($x=-0.25m$, $y=-0.5m$), the viscosity coefficient is peaked because of the treatment of the wall boundary condition: at this particular node, the normal is not well defined and may cause some numerical errors. The 1-D graphs at $y=0$ for the pressure and the Mach number are given in \fig{fig:2d_corner_isomach}: no spurious oscillations are observed and the shock is well resolved. Finally, the difference between the inlet and outlet mass flow rates is plotted in \fig{fig:2d_convergence} which shows that the steady state is reached. 
+% Overall, the numerical solution does not show any oscillations, match the analytical solution, and the shock is well resolved.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
